--- a/client/app/src/app/core/header/header.component.html
+++ b/client/app/src/app/core/header/header.component.html
@@ -10,6 +10,22 @@
 <button mat-button [routerLink]="['/producto/vendedor/5']" routerLinkActive="mat-raised-button">Proveedor</button>
 <button mat-button [routerLink]="['/mensaje/producto/vendedor/5']" routerLinkActive="mat-raised-button">Mensajes</button>
 
+<span class="mat-caption" *ngIf="isAutenticated">{{currentUser.usuario.Email}}</span>
+    <button mat-icon-button [matMenuTriggerFor]="menu3">
+      <mat-icon [ngStyle]="{'color': isAutenticated ? 'white': '#9E9E9E' }">person</mat-icon>
+    </button>
+<!--Menu usuario-->
+<mat-menu #menu3="matMenu">
+  <a mat-menu-item *ngIf="!(isAutenticated)" (click)="login()">
+    <mat-icon>person_add</mat-icon>
+    <span>Login</span>
+  </a>
+  <a mat-menu-item *ngIf="isAutenticated" (click)="logout()">
+    <mat-icon>person_remove</mat-icon>
+    <span>Logout</span>
+  </a>
+</mat-menu>
+
 </mat-toolbar>
 
 <!-- <p>header works!</p> -->
