--- a/client/app/src/app/core/header/header.component.html
+++ b/client/app/src/app/core/header/header.component.html
@@ -12,9 +12,9 @@
 
 <button mat-button [routerLink]="['/producto']" routerLinkActive="mat-raised-button">Productos</button>
 <button mat-button (click)="comprasCliente()" routerLinkActive="mat-raised-button">Compras</button>
-<button mat-button routerLinkActive="mat-raised-button">Pedidos</button>
-<button mat-button routerLinkActive="mat-raised-button">Proveedor</button>
-<button mat-button routerLinkActive="mat-raised-button">Mensajes</button>
+<button *ngIf="isVendedor()" mat-button (click)="pedidosCliente()" routerLinkActive="mat-raised-button">Pedidos</button>
+<button *ngIf="isVendedor()" mat-button (click)="proveedor()" routerLinkActive="mat-raised-button">Proveedor</button>
+<button *ngIf="isVendedor()" mat-button (click)="mensajes()" routerLinkActive="mat-raised-button">Mensajes</button>
 
 
 <!--Menu usuario-->
