--- a/client/app/src/app/producto/producto-admin/producto-admin.component.html
+++ b/client/app/src/app/producto/producto-admin/producto-admin.component.html
@@ -4,8 +4,10 @@
     <h1 class="titulo">Productos</h1>
   </mat-card-title>
   <mat-card-content>
-    <button mat-raised-button color="primary" (click)="crearProducto()">Nuevo Producto</button>
-    <br>
+    <button mat-raised-button color="primary" (click)="crearProducto()">
+      Nuevo Producto
+    </button>
+    <br />
 
     <!-- Table -->
     <div class="mat-elevation-z8" *ngIf="dataSource">
@@ -20,11 +22,12 @@
         <ng-container matColumnDef="foto">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Orden No.</th>
           <td mat-cell *matCellDef="let row">
-            <img *ngIf="row.FotoProducto[0] !== undefined"
+            <img
+              *ngIf="row.FotoProducto[0] !== undefined"
               mat-card-image
               class="fotoProducto"
-              [src]="getImageUrl(row.FotoProducto[0].Foto.data)"
-              alt="photo"
+              [src]="'data:image/jpeg;base64,' + row.FotoProducto[0].Foto"
+              alt="Foto de + {{ row.Nombre }}"
             />
           </td>
         </ng-container>
