--- a/client/app/src/app/producto/producto-edit/producto-edit.component.html
+++ b/client/app/src/app/producto/producto-edit/producto-edit.component.html
@@ -2,7 +2,6 @@
   [formGroup]="productoForm"
   (ngSubmit)="isCreate ? crearProducto() : actualizarVideojuego()"
   novalidate
-  
 >
   <input type="hidden" formControlName="id" />
   <input type="hidden" formControlName="vendedorId" />
@@ -98,19 +97,29 @@
 
       <div class="row">
         <div class="col">
-          <input type="file" formControlName="fotos" accept=".jpg" (change)="onFileChange($event)" multiple>
+          <input
+            type="file"
+            accept=".jpg"
+            (change)="onFileChange($event)"
+            multiple
+          />
           Seleccione hasta 5 imágenes
-          <mat-error *ngIf="errorHandling('fotos', 'required')"> Selecione al menos una imagen.</mat-error>
-          <mat-error *ngIf="countSelectedImages() > 5">No puedes seleccionar más de 5 imágenes</mat-error>
+          <mat-error *ngIf="errorHandling('fotos', 'required')">
+            Selecione al menos una imagen.</mat-error
+          >
+          <mat-error *ngIf="countSelectedImages() > 5"
+            >No puedes seleccionar más de 5 imágenes</mat-error
+          >
         </div>
       </div>
-      
-      <div class="row" *ngIf="productoForm.get('fotos').value && productoForm.get('fotos').value.length > 0">
-        <div class="col">
-          <strong>Archivos seleccionados:</strong>
-          <ul>
-            <li *ngFor="let file of productoForm.get('fotos').value">{{ file.name }}</li>
-          </ul>
+
+      <div *ngIf="fotos" class="mt-3 d-lg-flex d-md-flex">
+        <div *ngFor="let foto of fotos">
+          <img
+            height="100px"
+            [src]="isCreate ? fotos : 'data:image/jpeg;base64,' + foto.Foto"
+            style="border-radius: 5px; margin: 0.5rem"
+          />
         </div>
       </div>
 
