--- a/client/app/src/app/producto/producto-detail/producto-detail.component.css
+++ b/client/app/src/app/producto/producto-detail/producto-detail.component.css
@@ -117,17 +117,17 @@
   padding: 0.5rem;
   width: 100%;
   display: flex;
-  justify-content: space-between;
   background-color: white;
   box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2),
     0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12);
     border: none !important;
   border-radius: 5px;
   text-align: left !important;
+  transition: background-color 0.1s ease;
 }
 
 .recommendedCard:hover{
-  background-color: #acacac;
+  background-color: #e7b4b4;
 }
 
 .recommendedCard img {
@@ -138,13 +138,26 @@
   object-fit: contain;
 }
 
+.botones{
+  position: relative;
+  min-height: 25%;
+  width: 100%;
+  display: flex;
+}
+
+.btnAccion{
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  padding: 2rem;
+  font-size: large;
+}
+
 .dk {
   padding: 1%;
   margin: 1%;
-  right: 0;
   border-radius: 5px;
-  background-color: #22333b;
-  color: white;
+  color: #52a539;
   height: min-content;
 }
 
