--- a/client/app/src/app/producto/producto-detail/producto-detail.component.html
+++ b/client/app/src/app/producto/producto-detail/producto-detail.component.html
@@ -90,6 +90,8 @@
             <textarea matInput formControlName="pregunta" maxlength="500">
             </textarea>
             <mat-hint align="end"> / 500</mat-hint>
+            <mat-error> La pregunta es <strong>requerida</strong>
+            </mat-error>
             <!-- <mat-error *ngIf="errorHandling('pregunta','required')">
                   Nombre es <strong>requerido</strong>
                 </mat-error>
