--- a/client/app/src/app/producto/producto-edit/producto-edit.component.html
+++ b/client/app/src/app/producto/producto-edit/producto-edit.component.html
@@ -12,34 +12,42 @@
     <mat-card-content>
       <div class="row">
         <div class="col">
-          <mat-form-field class="full-width">
+
+          <mat-form-field floatLabel="always" class="full-width">
+            <mat-label>Nombre</mat-label>
             <input
               matInput
               #nombre
               formControlName="nombre"
               maxlength="200"
-              placeholder="Nombre"
             />
             <mat-hint align="end"> {{ nombre.value.length }}/ 200</mat-hint>
-            <mat-error *ngIf="errorHandling('nombre', 'required')">
+            <mat-error >
+              Nombre es <strong>requerido</strong>
+            </mat-error>
+            <!-- <mat-error *ngIf="errorHandling('nombre', 'required')">
               Nombre es <strong>requerido</strong>
             </mat-error>
             <mat-error *ngIf="errorHandling('nombre', 'minlength')">
               Nombre debe tener <strong>3 caracteres</strong>
-            </mat-error>
+            </mat-error> -->
           </mat-form-field>
         </div>
+
         <div class="col">
-          <mat-form-field class="full-width">
+          <mat-form-field floatLabel="always" class="full-width">
+            <mat-label>Precio</mat-label>
             <input
               matInput
               type="number"
-              placeholder="Precio"
+              class="example-right-align"
+              placeholder="0"
               formControlName="precio"
             />
             <span matTextPrefix>₡&nbsp;</span>
+
             <mat-error *ngIf="errorHandling('precio', 'required')">
-              Precio es <strong>requerido</strong>
+              Precio es <strong>requerido</strong> y debe ser número
             </mat-error>
           </mat-form-field>
         </div>
@@ -47,36 +55,38 @@
 
       <div class="row">
         <div class="col">
-          <mat-form-field class="full-width">
+          <mat-form-field floatLabel="always" class="full-width">
+            <mat-label>Descripción</mat-label>
             <textarea
               matInput
               #descripcion
-              placeholder="Descripción"
+              placeholder=""
               [maxlength]="500"
               formControlName="descripcion"
             ></textarea>
             <mat-hint align="end">
-              {{ descripcion.value.length }}/ 200</mat-hint
-            >
-            <mat-error *ngIf="errorHandling('descripcion', 'required')">
-              Descripción es <strong>requerido</strong>
-            </mat-error>
+              {{ descripcion.value.length }}/ 200</mat-hint>
+              <mat-error >
+                Descripción es <strong>requerido</strong>
+              </mat-error>
           </mat-form-field>
         </div>
       </div>
 
       <div class="row">
         <div class="col">
-          <mat-form-field class="full-width">
+          <mat-form-field floatLabel="always" class="full-width">
+            <mat-label>Cantidad</mat-label>
             <input
               matInput
               #cantidad
+              type="number"
               formControlName="cantidad"
               maxlength="10"
-              placeholder="Cantidad"
+              placeholder=""
             />
             <mat-error *ngIf="errorHandling('cantidad', 'required')">
-              Cantidad es <strong>requerido</strong>
+              Cantidad es <strong>requerido</strong> y debe ser número
             </mat-error>
           </mat-form-field>
         </div>
@@ -84,8 +94,9 @@
 
       <div class="row">
         <div class="col" *ngIf="CategoriaList">
-          <mat-form-field class="full-width">
-            <mat-select placeholder="Categoria" formControlName="categoria">
+          <mat-form-field floatLabel="always" class="full-width">
+            <mat-label>Categoría</mat-label>
+            <mat-select formControlName="categoria">
               <mat-option *ngFor="let g of CategoriaList" [value]="g.id">
                 {{ g.Descripcion }}
               </mat-option>
@@ -95,6 +106,20 @@
         </div>
       </div>
 
+      <div class="row">
+        <div class="col" *ngIf="EstadoList">
+          <mat-form-field floatLabel="always" class="full-width">
+            <mat-label>Estado del producto</mat-label>
+            <mat-select  formControlName="estado">
+              <mat-option *ngFor="let g of EstadoList" [value]="g.id">
+                {{ g.Descripcion }}
+              </mat-option>
+            </mat-select>
+            <mat-error> Estado es <strong>requerido</strong> </mat-error>
+          </mat-form-field>
+        </div>
+      </div>
+      
       <div class="row">
         <div class="col">
           <input
