--- a/client/app/src/app/core/header/header.component.html
+++ b/client/app/src/app/core/header/header.component.html
@@ -1,24 +1,21 @@
-
-<mat-toolbar class="general" color="primary">
+<!--NAVBAR ANTERIOR-->
+<!-- <mat-toolbar class="general" color="primary">
 
 <button mat-button [routerLink]="['/']" routerLinkActive="mat-raised-button">
   <img mat-card-lg-image src="../../../assets/img/logov2.png"/>
-</button>
+</button> -->
 <!--  <button mat-button [routerLink]="['/producto']" routerLinkActive="mat-raised-button">Productos</button>
 <button mat-button [routerLink]="['/compra/cliente/1']" routerLinkActive="mat-raised-button">Compras</button>
 <button mat-button [routerLink]="['/pedido/vendedor/5']" routerLinkActive="mat-raised-button">Pedidos</button>
 <button mat-button [routerLink]="['/producto/vendedor/5']" routerLinkActive="mat-raised-button">Proveedor</button>
 <button mat-button [routerLink]="['/mensaje/producto/vendedor/5']"  routerLinkActive="mat-raised-button">Mensajes</button> -->
-
-<button mat-button [routerLink]="['/producto']" routerLinkActive="mat-raised-button">Productos</button>
+<!-- <button mat-button [routerLink]="['/producto']" routerLinkActive="mat-raised-button">Productos</button>
 <button *ngIf="isCliente() || isVendedor()" mat-button (click)="comprasCliente()" routerLinkActive="mat-raised-button">Compras</button>
 <button *ngIf="isVendedor()" mat-button (click)="pedidosCliente()" routerLinkActive="mat-raised-button">Pedidos</button>
 <button *ngIf="isVendedor()" mat-button (click)="proveedor()" routerLinkActive="mat-raised-button">Proveedor</button>
-<button *ngIf="isVendedor()" mat-button (click)="mensajes()" routerLinkActive="mat-raised-button">Mensajes</button>
-
-
+<button *ngIf="isVendedor()" mat-button (click)="mensajes()" routerLinkActive="mat-raised-button">Mensajes</button> -->
 <!--Menu usuario-->
-<ng-container class="usuario">
+<!-- <ng-container class="usuario">
   <span class="mat-caption" *ngIf="isAutenticated">{{currentUser.user.Email}}</span>
   <button mat-icon-button [matMenuTriggerFor]="menu3">
     <mat-icon [ngStyle]="{'color': isAutenticated ? 'white': '#9E9E9E' }">person</mat-icon>
@@ -35,9 +32,73 @@
 </mat-menu>
 </ng-container>
   
+</mat-toolbar> -->
 
 
+<c-navbar  expand="lg" class="navbar-style">
+  <c-container fluid>
+    <button mat-button [routerLink]="['/']" routerLinkActive="mat-raised-button">
+      <img mat-card-lg-image src="../../../assets/img/logov2.png"/>
+    </button>
+     <button [cNavbarToggler]="collapseRef"></button> 
+    <div #collapseRef="cCollapse" cCollapse navbar>
+      <c-navbar-nav class="me-auto mb-2 mb-lg-0">
+        <c-nav-item>
+          <button mat-button class="navbar-text" [routerLink]="['/producto']" routerLinkActive="mat-raised-button">Productos</button>
+        </c-nav-item>
 
-</mat-toolbar>
+        <c-nav-item>
+          <button *ngIf="isCliente() || isVendedor()" mat-button (click)="comprasCliente()" routerLinkActive="mat-raised-button">Compras</button>
+        </c-nav-item>
 
-<!-- <p>header works!</p> -->
+        <c-nav-item>
+          <button *ngIf="isVendedor()" mat-button (click)="pedidosCliente()" routerLinkActive="mat-raised-button">Pedidos</button>
+        </c-nav-item>
+
+        <c-nav-item>
+          <button *ngIf="isVendedor()" mat-button (click)="proveedor()" routerLinkActive="mat-raised-button">Proveedor</button>
+        </c-nav-item>
+
+        <c-nav-item>
+          <button *ngIf="isVendedor()" mat-button (click)="mensajes()" routerLinkActive="mat-raised-button">Mensajes</button>
+        </c-nav-item>
+
+      <!--dropdown-->
+        <ng-container class="usuario">
+          <c-navbar-text *ngIf="isAutenticated">{{currentUser.user.Email}}</c-navbar-text>
+          
+          <button mat-icon-button [matMenuTriggerFor]="menu3">
+            <mat-icon [ngStyle]="{'color': isAutenticated ? 'white': '#9E9E9E' }">person</mat-icon>
+          </button>
+        <mat-menu #menu3="matMenu" >
+          <a mat-menu-item *ngIf="!(isAutenticated)" (click)="login()">
+            <mat-icon>person_add</mat-icon>
+            <span>Login</span>
+          </a>
+          <a mat-menu-item *ngIf="isAutenticated" (click)="logout()">
+            <mat-icon>person_remove</mat-icon>
+            <span>Logout</span>
+          </a>
+        </mat-menu>
+        </ng-container>
+      </c-navbar-nav>
+    </div>
+  </c-container>
+</c-navbar>
+
+  <!--voy a mejorar el dropdown más adelante-->
+     <!-- <c-dropdown [popper]="false" variant="nav-item">
+          <c-navbar-text *ngIf="isAutenticated">{{currentUser.user.Email}}</c-navbar-text>
+          <button cDropdownToggle  mat-icon-button >
+            <mat-icon [ngStyle]="{'color': isAutenticated ? 'white': '#9E9E9E' }">person</mat-icon>
+          </button>
+          <div cDropdownMenu>
+            <button cDropdownItem *ngIf="!(isAutenticated)" (click)="login()">
+               Login
+            </button>
+            <button cDropdownItem *ngIf="!(isAutenticated)" (click)="logout()">
+             Logout
+            </button>
+          </div>
+        </c-dropdown> -->
+     
