--- a/client/app/src/app/producto/producto-admin/producto-admin.component.html
+++ b/client/app/src/app/producto/producto-admin/producto-admin.component.html
@@ -1,10 +1,10 @@
 <mat-card class="full-width color">
   <!-- Titulo del Card -->
   <mat-card-title>
-    <h1 class="titulo">Productos</h1>
+    <h1 class="titulo">Catálogo de productos</h1>
   </mat-card-title>
   <mat-card-content>
-    <button mat-raised-button color="primary" (click)="crearProducto()">
+    <button mat-raised-button color="primary" class="btnAcciones btnCrear" (click)="crearProducto()">
       Nuevo Producto
     </button>
     <br />
@@ -20,7 +20,7 @@
       >
         <!-- Columna Foto -->
         <ng-container matColumnDef="foto">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Orden No.</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Foto</th>
           <td mat-cell *matCellDef="let row">
             <img
               *ngIf="row.FotoProducto[0] !== undefined"
@@ -53,15 +53,26 @@
           <th mat-header-cell *matHeaderCellDef>Acciones</th>
           <td mat-cell *matCellDef="let row">
             <button
+            class="btnAcciones"
               mat-mini-fab
-              class="btnDetalle"
               color="accent"
-              matTooltip="Detalle Compra"
-              aria-label="Detalle Compra"
+              matTooltip="Actualizar Producto"
+              aria-label="Actualizar Producto"
               color="primary"
               (click)="actualizarProducto(row.id)"
             >
               <mat-icon>edit</mat-icon>
+            </button>
+            <button
+            class="btnAcciones"
+              mat-mini-fab
+              color="accent"
+              matTooltip="Detalle Producto"
+              aria-label="Detalle Producto"
+              color="primary"
+              (click)="detalle(row.id)"
+            >
+            <mat-icon class="mat-18">info</mat-icon>
             </button>
           </td>
         </ng-container>
@@ -74,8 +85,8 @@
         #paginator
         [length]="dataSource?.data?.length"
         [pageIndex]="0"
-        [pageSize]="6"
-        [pageSizeOptions]="[6, 12, 24]"
+        [pageSize]="5"
+        [pageSizeOptions]="[5, 10, 15]"
         aria-label="Selecccione una página"
       >
       </mat-paginator>
