--- a/client/app/src/app/core/header/header.component.html
+++ b/client/app/src/app/core/header/header.component.html
@@ -43,8 +43,14 @@
      <button [cNavbarToggler]="collapseRef"></button> 
     <div #collapseRef="cCollapse" cCollapse navbar>
       <c-navbar-nav class="me-auto mb-2 mb-lg-0">
+        <!--ADMIN NAVBAR-->
         <c-nav-item>
-          <button mat-button class="navbar-text" [routerLink]="['/producto']" routerLinkActive="mat-raised-button">Productos</button>
+          <button *ngIf="isAdmin()" mat-button [routerLink]="['/admin/producto/']" routerLinkActive="mat-raised-button"> Productos</button>
+        </c-nav-item>
+
+        
+        <c-nav-item>
+          <button *ngIf="isCliente() || isVendedor()" mat-button class="navbar-text" [routerLink]="['/producto']" routerLinkActive="mat-raised-button">Productos</button>
         </c-nav-item>
 
         <c-nav-item>
@@ -63,8 +69,34 @@
           <button *ngIf="isVendedor()" mat-button (click)="mensajes()" routerLinkActive="mat-raised-button">Mensajes</button>
         </c-nav-item>
 
-      <!--dropdown-->
-        <ng-container class="usuario">
+        <!-- <c-nav-item *ngIf="isAutenticated" class="btnEmail">
+          <button mat-button disabled *ngIf="isAutenticated"  class="btnEmail">{{currentUser.user.Email}}</button>
+        </c-nav-item> -->
+
+        <c-dropdown variant="nav-item" [popper]="false" >
+          <button cDropdownToggle cNavLink class="btnEmail">
+            <c-navbar-text *ngIf="isAutenticated">{{currentUser.user.Email}}</c-navbar-text>
+            <mat-icon [ngStyle]="{'color': isAutenticated ? 'white': '#9E9E9E' }">person</mat-icon>
+          </button>
+          <ul cDropdownMenu>
+            <li><button cDropdownItem (click)="login()" *ngIf="!(isAutenticated)" >
+              <mat-icon>person_add</mat-icon>
+               Login
+            </button></li>
+            <li><button cDropdownItem (click)="logout()" *ngIf="isAutenticated">
+              <mat-icon>person_remove</mat-icon>
+             Logout
+            </button></li>
+          </ul >
+        </c-dropdown> 
+      </c-navbar-nav>
+    </div>
+  </c-container>
+</c-navbar>
+
+
+     <!-- 
+      <ng-container class="usuario">
           <c-navbar-text *ngIf="isAutenticated">{{currentUser.user.Email}}</c-navbar-text>
           
           <button mat-icon-button [matMenuTriggerFor]="menu3">
@@ -80,25 +112,4 @@
             <span>Logout</span>
           </a>
         </mat-menu>
-        </ng-container>
-      </c-navbar-nav>
-    </div>
-  </c-container>
-</c-navbar>
-
-  <!--voy a mejorar el dropdown más adelante-->
-     <!-- <c-dropdown [popper]="false" variant="nav-item">
-          <c-navbar-text *ngIf="isAutenticated">{{currentUser.user.Email}}</c-navbar-text>
-          <button cDropdownToggle  mat-icon-button >
-            <mat-icon [ngStyle]="{'color': isAutenticated ? 'white': '#9E9E9E' }">person</mat-icon>
-          </button>
-          <div cDropdownMenu>
-            <button cDropdownItem *ngIf="!(isAutenticated)" (click)="login()">
-               Login
-            </button>
-            <button cDropdownItem *ngIf="!(isAutenticated)" (click)="logout()">
-             Logout
-            </button>
-          </div>
-        </c-dropdown> -->
-     
+        </ng-container> -->
