--- a/client/app/src/app/producto/producto-all-by-vendedor/producto-all-by-vendedor.component.html
+++ b/client/app/src/app/producto/producto-all-by-vendedor/producto-all-by-vendedor.component.html
@@ -1,76 +1,83 @@
 
 <mat-card class="full-width color">
-    <!-- Titulo del Card -->
-    <mat-card-title>
-      <h1 class="titulo">Inventario de proveedor</h1>
-    </mat-card-title>
-    <mat-card-content>
-      <!-- Table -->
-      <div class="mat-elevation-z8" *ngIf="dataSource">
-        <table
-          mat-table
-          [dataSource]="dataSource"
-          class="full-width-table"
-          matSort
-          aria-label="Elements"
-        >
-          <!-- Columna Producto -->
-          <ng-container matColumnDef="producto">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Producto</th>
-            <td mat-cell *matCellDef="let row">{{ row.Nombre }}</td>
-          </ng-container>
-  
-           <!-- Columna acciones -->
-           <ng-container matColumnDef="categoria-estado">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Categoría y Estado</th>
-            <td mat-cell *matCellDef="let row">{{ row.categoria.Descripcion + " - " + row.estado.Descripcion }}</td> 
-          </ng-container>
+  <!-- Titulo del Card -->
+  <mat-card-title>
+    <h1 class="titulo">Inventario de proveedor</h1>
+  </mat-card-title>
+  <mat-card-content>
+    <button mat-raised-button color="primary" (click)="crearProducto()">
+      Nuevo Producto
+    </button>
+    <!-- Table -->
+    <div class="mat-elevation-z8" *ngIf="dataSource">
+      <table
+        mat-table
+        [dataSource]="dataSource"
+        class="full-width-table"
+        matSort
+        aria-label="Elements"
+      >
+        <!-- Columna Foto -->
+        <ng-container matColumnDef="foto">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Orden No.</th>
+          <td mat-cell *matCellDef="let row">
+            <img
+              *ngIf="row.FotoProducto[0] !== undefined"
+              mat-card-image
+              class="fotoProducto"
+              [src]="'data:image/jpeg;base64,' + row.FotoProducto[0].Foto"
+              alt="Foto de + {{ row.Nombre }}"
+            />
+          </td>
+        </ng-container>
 
-          <!-- Columna Cantidad -->
-          <ng-container matColumnDef="cantidad">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Cantidad</th>
-            <td mat-cell *matCellDef="let row">{{ row.Cantidad }}</td>
-          </ng-container>
-  
-          <!-- Columna Precio -->
-          <ng-container matColumnDef="precio">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Precio</th>
-            <td mat-cell *matCellDef="let row">{{ row.Precio  | currency : "₡"  }}</td> 
-          </ng-container>
+        <!-- Columna Nombre -->
+        <ng-container matColumnDef="nombre">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Nombre</th>
+          <td mat-cell *matCellDef="let row">
+            {{ row.Nombre }}
+          </td>
+        </ng-container>
 
-           
-          <!-- Columna acciones -->
-      <!--     <ng-container matColumnDef="acciones">
-            <th mat-header-cell *matHeaderCellDef>Acciones</th>
-            <td mat-cell *matCellDef="let row">
-              <button
-                mat-mini-fab
-                color="accent"
-                matTooltip="Mensajes"
-                aria-label="Mensajes"
-                color="primary"
-                (click)="mensajes(row.id)"
-              >
-              <mat-icon>question_answer</mat-icon>
-              </button>
-            </td>
-          </ng-container>  -->
-  
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-        </table>
-  
-        <mat-paginator
-          #paginator
-          [length]="dataSource?.data?.length"
-          [pageIndex]="0"
-          [pageSize]="3"
-          [pageSizeOptions]="[3, 5, 10]"
-          aria-label="Selecccione una página"
-        >
-        </mat-paginator>
-      </div>
-      <!-- Table -->
-    </mat-card-content>
-  </mat-card>
-  
+        <!-- Columna Cantidad -->
+        <ng-container matColumnDef="cantidad">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Cantidad</th>
+          <td mat-cell *matCellDef="let row">{{ row.Cantidad }}</td>
+        </ng-container>
+
+         <!-- Columna acciones -->
+        <ng-container matColumnDef="acciones">
+          <th mat-header-cell *matHeaderCellDef>Acciones</th>
+          <td mat-cell *matCellDef="let row">
+            <button
+              mat-mini-fab
+              class="btnDetalle"
+              color="accent"
+              matTooltip="Detalle Compra"
+              aria-label="Detalle Compra"
+              color="primary"
+              (click)="actualizarProducto(row.id)"
+            >
+              <mat-icon>edit</mat-icon>
+            </button>
+          </td>
+        </ng-container>
+     
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      </table>
+
+      <mat-paginator
+        #paginator
+        [length]="dataSource?.data?.length"
+        [pageIndex]="0"
+        [pageSize]="3"
+        [pageSizeOptions]="[3, 5, 10]"
+        aria-label="Selecccione una página"
+      >
+      </mat-paginator>
+    </div>
+    <!-- Table -->
+  </mat-card-content>
+</mat-card>
