--- a/client/app/src/app/producto/producto-all-by-vendedor/producto-all-by-vendedor.component.css
+++ b/client/app/src/app/producto/producto-all-by-vendedor/producto-all-by-vendedor.component.css
@@ -35,4 +35,14 @@
     object-fit: contain;
   
   }
+  .btnAcciones{
+    margin-left: 2%;
+    margin-right: 2%;
+  }
+  .btnAcciones:hover{
+    background-color: #C44536;
+  }
+  .btnCrear{
+    margin-bottom: 1%;
+  }
   
